--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna Recipes</a>
+
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna Recipes</a></li>
+        <li><a href="recipes/Garlic Chicken Rigatoni.html">Garlic Chicken Rigatoni</a></li>
+        <li><a href="recipes/Skillet Macaroni and Cheese.html">Skillet Macaroni and Cheese</a></li>
+    </ul>
+    
 </body>
 </html>
