--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,14 +7,16 @@
     <title>Recipes</title>
 </head>
 <body>
+    <h1> <a href="../index.html">HOME</a> </h1>
+
     <h1>Lasagna Recipes</h1>
-    <img src="/images/lasagna.jpeg" alt="Lasagna image">
+    <img src="../images/lasagna.jpeg" alt="Lasagna image">
     <h1>How to Make Lasagna</h1>
     <p>Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:</p>
 
     <h2>Lasagna Ingredients</h2>
     <p>The Allrecipes community adores this lasagna recipe because it's incredibly customizable, so you can easily alter the ingredient list to suit your needs. If you want to stay true to the original recipe, though, these are the ingredients you'll need to add to your grocery list:</p>
-    
+
     <ul>
         <li>Meat: This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
         <li>Onion and garlic: An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
